--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <link rel="icon" type="image/x-icon" href="./public/favicon-j.svg" />
     <title>CodeNomads</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <load src="./partials/header.html"></load>
     <main>
-      <!-- Loads the specified .html file -->
+      <load src="./partials/hero.html"></load>
+      <load src="./partials/about-me.html"></load>
+      <load src="./partials/benefits.html"></load>
+      <load src="./partials/projects.html"></load>
+      <load src="./partials/faq.html"></load>
+      <load src="./partials/covers.html"></load>
+      <load src="./partials/reviews.html"></load>
+      <load src="./partials/work-together.html"></load>
     </main>
 
     <script type="module" src="./main.js"></script>
