--- a/src/index.html
+++ b/src/index.html
@@ -15,19 +15,19 @@
       href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html"></load>
+    <load src="./partials/header.html" />
     <main>
-      <load src="./partials/hero.html"></load>
-      <load src="./partials/about-me.html"></load>
-      <load src="./partials/benefits.html"></load>
-      <load src="./partials/projects.html"></load>
-      <load src="./partials/faq.html"></load>
-      <load src="./partials/covers.html"></load>
-      <load src="./partials/reviews.html"></load>
-      <load src="./partials/work-together.html"></load>
+      <load src="./partials/hero.html" />
+      <load src="./partials/about-me.html" />
+      <load src="./partials/benefits.html" />
+      <load src="./partials/projects.html" />
+      <load src="./partials/faq.html" />
+      <load src="./partials/covers.html" />
+      <load src="./partials/reviews.html" />
+      <load src="./partials/work-together.html" />
     </main>
 
     <script type="module" src="./main.js"></script>
